--- a/package.json
+++ b/package.json
@@ -14,7 +14,15 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0",
     "postcss": "^8.1.10",
+    "prettier": "^2.3.0",
     "tailwindcss": "^2.1.1"
   }
 }
