--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dayjs": "^1.10.4",
     "framer-motion": "^4.1.17",
     "next": "latest",
     "react": "^17.0.1",
