--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.10.4",
     "framer-motion": "^4.1.17",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
