--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^13.1.9",
     "dayjs": "^1.10.4",
     "framer-motion": "^4.1.17",
     "next": "latest",
