:lipstick: | added responsive in footer

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "*.{js,css,md}": "prettier --write"
   },
   "dependencies": {
+    "@headlessui/react": "^1.2.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
