--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "dayjs": "^1.10.4",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "framer-motion": "^4.1.17",
     "next": "latest",
     "prop-types": "^15.7.2",
@@ -25,7 +26,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.4",
+    "autoprefixer": "^10.4.2",
     "babel-jest": "^27.0.2",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
@@ -35,8 +36,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwindcss": "^3.4.3",
     "jest": "^27.0.3",
-    "postcss": "^8.1.10",
+    "postcss": "^8.4.6",
     "prettier": "^2.3.0",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^3.0.19"
   }
 }
